# cldera-tools

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ClderaConfig.cmake.in  cldera_options.cmake
data/: ipcc_mask_ne4pg2.nc  latlon_ne4pg2.nc  masked_integrals.nc
doc/nightlyCDash/NightlyTestingEmail/: CLDERAExpectedBuilds.csv  cldera_cdash_status.sh  cronjob.txt  process_nightlies.sh
doc/vscode/: .fortls  README.md  cldera-tools-workspace.code-workspace  e3sm-workspace.code-workspace
scripts/: cldera_profiling_config.yaml  configure-cldera-tools  configure-cldera-tools-mappy  configure-cldera-tools-runner
scripts/configure/: configure-cldera-tools-runner.sh  configure-cldera-tools-skybridge.sh  configure-cldera-tools-vaporwave.sh
scripts/env/: env_mach_specific-skybridge.sh  load-modules-mappy.sh  load-modules-s1007989.sh  load-modules-vaporwave.sh
scripts/examples/e3sm_pnetcdf_reference/: cldera_profiling_config.yaml  run.v2.ULR.FIDEAL-CLDERA.eruption.sh
scripts/utils/: create_ipcc_masks.py  ensemble-mean-std.py  generate_input.py  ipcc-overlay.py  plot_diff.py  plot_pnetcdf.py  read_pnetcdf.py  region_mean.py  utils.py
scripts/utils/masks/: create_global_masks.py  create_ipcc_masks.py  create_zonal_masks.py
src/: CMakeLists.txt  cldera_config.h.in  cldera_version.h.in
src/io/: CMakeLists.txt  cldera_pnetcdf.cpp  cldera_pnetcdf.hpp
src/profiling/: CMakeLists.txt  cldera_bounds_field_test.cpp  cldera_bounds_field_test.hpp  cldera_data_type.cpp  cldera_data_type.hpp  cldera_field.cpp  cldera_field.hpp  cldera_field_layout.cpp  cldera_field_layout.hpp  cldera_field_test.hpp  cldera_field_test_factory.cpp  cldera_field_test_factory.hpp  cldera_graph.cpp  cldera_graph.hpp  cldera_graph_factory.cpp  cldera_graph_factory.hpp  cldera_graph_vertex.cpp  cldera_graph_vertex.hpp  cldera_interface_f2c_mod.F90  cldera_interface_mod.F90  cldera_max_field_test.cpp  cldera_max_field_test.hpp  cldera_min_field_test.cpp  cldera_min_field_test.hpp  cldera_mpi_timing_wrappers.hpp  cldera_pathway.cpp  cldera_pathway.hpp  cldera_pathway_factory.cpp  cldera_pathway_factory.hpp  cldera_profiling_archive.cpp  cldera_profiling_archive.hpp  cldera_profiling_context.cpp  cldera_profiling_context.hpp  cldera_profiling_interface.cpp  cldera_profiling_interface.hpp  cldera_profiling_session.cpp  cldera_profiling_session.hpp  cldera_profiling_test_manager.cpp  cldera_profiling_test_manager.hpp  cldera_profiling_types.hpp  (+1 more)
src/profiling/stats/: cldera_compute_avg.cpp  cldera_compute_max.cpp  cldera_compute_min.cpp  cldera_compute_stat.hpp  cldera_compute_sum.cpp  cldera_field_avg_along_columns.hpp  cldera_field_bounded.cpp  cldera_field_bounded.hpp  cldera_field_bounded_masked_integral.cpp  cldera_field_bounded_masked_integral.hpp  cldera_field_bounding_box.cpp  cldera_field_bounding_box.hpp  cldera_field_global_avg.hpp  cldera_field_global_max.cpp  cldera_field_global_max.hpp  cldera_field_global_min.cpp  cldera_field_global_min.hpp  cldera_field_global_sum.cpp  cldera_field_global_sum.hpp  cldera_field_identity.cpp  cldera_field_identity.hpp  cldera_field_masked_integral.cpp  cldera_field_masked_integral.hpp  cldera_field_max_along_columns.cpp  cldera_field_max_along_columns.hpp  cldera_field_min_along_columns.cpp  cldera_field_min_along_columns.hpp  cldera_field_pnetcdf_reference.hpp  cldera_field_stat.cpp  cldera_field_stat.hpp  cldera_field_stat_along_axis.hpp  cldera_field_stat_factory.cpp  cldera_field_stat_factory.hpp  cldera_field_stat_pipe.hpp  cldera_field_stat_utils.hpp  cldera_field_sum_along_columns.cpp  cldera_field_sum_along_columns.hpp  cldera_field_vertical_contraction.hpp  cldera_field_zonal_mean.cpp  cldera_field_zonal_mean.hpp  (+3 more)
src/profiling/utils/: cldera_subview_utils.hpp
src/timing/: CMakeLists.txt  cldera_timer.hpp  cldera_timer_history.hpp  cldera_timing_session.cpp  cldera_timing_session.hpp
tests/: CMakeLists.txt
tests/io/: CMakeLists.txt  cldera_pnetcdf_tests.cpp  compare_nc.cmake
tests/profiling/: CMakeLists.txt  archive.cpp  bounds_field_test.cpp  cldera_field_test_input.yaml  cldera_graph_input.yaml  cldera_pathway_input.yaml  compute_stats.cpp  compute_stats_pnetcdf.cpp  context.cpp  field.cpp  graph.cpp  masked_integral.cpp  pathway.cpp  piped_stats.cpp  profiling.cpp  session.cpp  subview_utils.cpp  test_manager.cpp  time_stamp.cpp  vertical_contraction.cpp
tests/timing/: CMakeLists.txt  cldera_timing_tests.cpp
